# fairino-cpp-sdk

./: README.md
libfairino/: CMakeLists.txt  CMakeSettings.json  cc_rk3399.cmake  cc_rk3568.cmake  cc_rk3588.cmake  readme.md
libfairino/LinuxBuild/: build3399.sh  build3568.sh  build3588.sh  buildAndroid17.sh  buildAndroid22.sh  buildGcc.sh
libfairino/src/: main.cpp
libfairino/src/include/Base/: Utility.h  base64.h  md5.hpp
libfairino/src/include/CNDE/: CNDEFrameHandle.h  FRCNDEClient.h
libfairino/src/include/ComClient/: FRTcpClient.h  FRUdpClient.h  FrameHandle.h
libfairino/src/include/Log/: elog.h  elog_cfg.h  elog_file_cfg.h  logger.h
libfairino/src/include/Robot/: robot.h  robot_types.h
libfairino/src/include/Robot-CN/: robot.h  robot_error.h  robot_types.h
libfairino/src/include/Robot-EN/: robot.h  robot_error.h  robot_types.h
libfairino/src/include/TcpClient/: FRTcpClient.h  FrameHandle.h  network.h
libfairino/src/include/XmlRpc/: XmlRpc.h  XmlRpcClient.h  XmlRpcException.h  XmlRpcServer.h  XmlRpcServerConnection.h  XmlRpcServerMethod.h  XmlRpcSocket.h  XmlRpcUtil.h  XmlRpcValue.h
libfairino/src/src/Base/: Utility.cpp
libfairino/src/src/CNDE/: CNDEFrameHandle.cpp  FRCNDEClient.cpp
libfairino/src/src/ComClient/: FRTcpClient.cpp  FRUdpClient.cpp  FrameHandle.cpp
libfairino/src/src/Log/: elog.c  elog_async.c  elog_buf.c  elog_file.c  elog_file_port.c  elog_port.c  logger.cpp
libfairino/src/src/Robot/: RobotRealtimeState.cpp  robot.cpp  robotDevice.cpp  robotIO.cpp  robotMotion.cpp
libfairino/src/src/TcpClient/: FRTcpClient.cpp  FrameHandle.cpp
libfairino/src/src/XmlRpc/: XmlRpcClient.cpp  XmlRpcDispatch.cpp  XmlRpcServerConnection.cpp  XmlRpcSocket.cpp  XmlRpcUtil.cpp
linux/example/src/: get_logger_interface.cpp  get_robot_version.cpp  robot_basic_interface.cpp  robot_common_set_interface.cpp  robot_convey_set.cpp  robot_convey_track.cpp  robot_convey_trackRecord.cpp  robot_dhparam.cpp  robot_external_device.cpp  robot_force_compliance.cpp  robot_force_control.cpp  robot_force_find_surface_cal_center.cpp  robot_force_guard.cpp  robot_force_payload_identify.cpp  robot_force_sensor_set.cpp  robot_force_spiral_rot_line_insertion.cpp  robot_get_data.cpp  robot_io_interface.cpp  robot_jog.cpp  robot_loadIdentity_test.cpp  robot_motion_interface.cpp  robot_movecart.cpp  robot_new_spiral.cpp  robot_new_spline.cpp  robot_otherFunctions_test.cpp  robot_points_offset.cpp  robot_pointtable_download.cpp  robot_pointtable_switch.cpp  robot_safety_set_interface.cpp  robot_servoj.cpp  robot_spline.cpp  robot_tpd_record.cpp  robot_tpd_repetition.cpp  robot_traj_test.cpp  robot_weld.cpp  robot_weld_setParam.cpp  robot_weld_setfeed.cpp  webapp_program_use.cpp
linux/libfairino/include/: robot.h  robot_error.h  robot_types.h
linux/libfairino/include/libfairino/: robot.h  robot_error.h
linux/libfairino/lib/arm/rk3399/: libfairino.so.2.1.3  libfairino.so.2.1.4
linux/libfairino/lib/arm/rk3568/: libfairino.so.2  libfairino.so.2.1.4
linux/libfairino/lib/x86/: libfairino.so.2.1.3  libfairino.so.2.1.4
windows/example/include/libfairino/: robot.h  robot_error.h  robot_types.h
windows/example/lib/: fairinod.exp  fairinod.ilk  fairinod.lib
windows/example/src/: get_logger_interface.cpp  robot_GetRobotTeachingPoint.cpp  robot_basic_interface.cpp  robot_common_set_interface.cpp  robot_external_device.cpp  robot_force_compliance.cpp  robot_force_control.cpp  robot_force_find_surface_cal_center.cpp  robot_force_guard.cpp  robot_force_payload_identify.cpp  robot_force_sensor_set.cpp  robot_force_spiral_rot_line_insertion.cpp  robot_get_data.cpp  robot_io_interface.cpp  robot_jog.cpp  robot_loadIdentity_test.cpp  robot_motion_interface.cpp  robot_movecart.cpp  robot_new_spiral.cpp  robot_new_spline.cpp  robot_otherFunctions_test.cpp  robot_outputmodel_interface.cpp  robot_points_offset.cpp  robot_pointtable_upload.cpp  robot_safety_set_interface.cpp  robot_servocart.cpp  robot_servoj.cpp  robot_setformat_interface.cpp  robot_spline.cpp  robot_tpd_record.cpp  robot_tpd_repetition.cpp  robot_traj_test.cpp  robot_weld_weave.cpp  webapp_program_use.cpp
windows/libfairino/example/: CMakeLists.txt
windows/libfairino/example/src/: robot_convey_trackRecord.cpp  robot_force_compliance.cpp  robot_force_guard.cpp  robot_force_payload_identify.cpp  robot_io_interface.cpp  robot_motion_interface.cpp  robot_movecart.cpp  robot_segment_weld.cpp  robot_servocart.cpp  robot_servoj.cpp  robot_setlvl_interface.cpp  robot_traj_test.cpp  webapp_program_use.cpp
windows/libfairino/include/: robot.h  robot_error.h  robot_types.h
windows/libfairino/include/include/: robot.h  robot_error.h  robot_types.h
windows/libfairino/lib/vs2017 x86-64/Debug/: fairino.exp  fairino.ilk  (+4 more)
(+76 files in other folders)
